[gd_scene format=3 uid="uid://e0ulrqvbqvar"]

[ext_resource type="Script" uid="uid://mpkwc46b3frw" path="res://pz_file_loader/scripts/pz_file_loader.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://gf2sllqufeeu" path="res://pz_file_loader/scripts/script_loader.gd" id="2_sugp2"]

[node name="PZFileLoader" type="Node" unique_id=53948729]
script = ExtResource("1_0wfyh")

[node name="ScriptLoader" type="Node" parent="." unique_id=1139516977]
script = ExtResource("2_sugp2")

[node name="UI" type="CanvasLayer" parent="." unique_id=1743238897]

[node name="MarginContainer" type="MarginContainer" parent="UI" unique_id=1101915994]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="CenterContainer" type="CenterContainer" parent="UI/MarginContainer" unique_id=905752964]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/CenterContainer" unique_id=699916750]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer" unique_id=1347463398]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer" unique_id=237709708]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer/MarginContainer" unique_id=690940934]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1671751071]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=2094735336]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SelectFolderButton" type="Button" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1763553398]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer" unique_id=685287613]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2" unique_id=1960485601]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ActionsContainer" type="VBoxContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer" unique_id=1888326823]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionsLabel" type="Label" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer" unique_id=1813592615]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Actions"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer" unique_id=1118628857]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer" unique_id=401432750]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="ClearButton" type="Button" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer" unique_id=79951627]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Clear & Rescan"

[node name="OpenConfigButton" type="Button" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer" unique_id=1194212529]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Open Config Folder"

[node name="FolderManagerButton" type="Button" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer" unique_id=1225264010]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Folder Manager"

[node name="FolderSelectorButton" type="Button" parent="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer" unique_id=832691880]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Folder Selector"

[node name="FileDialog" type="FileDialog" parent="." unique_id=2143322927]
oversampling_override = 1.0
position = Vector2i(0, 36)

[connection signal="pressed" from="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer/OpenConfigButton" to="." method="_on_open_config_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer/FolderManagerButton" to="." method="_on_folder_manager_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/CenterContainer/VBoxContainer/PanelContainer2/MarginContainer/ActionsContainer/GridContainer/FolderSelectorButton" to="." method="_on_folder_selector_button_pressed"]
